[package]
name = "stack-buf"
version = "0.1.6"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Vector-like facade for arrays allocated entirely on the stack."
keywords = ["stack", "vector", "vec", "str", "no_std"]
categories = ["data-structures"]
repository = "https://github.com/davidli2010/stack-buf.git"
homepage = "https://github.com/davidli2010/stack-buf"
documentation = "https://docs.rs/stack-buf"

[features]
default = ["std"]
std = []
str = []

[dependencies]
serde = { version = "1.0", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
